--- a/public/css/procurarPet.css
+++ b/public/css/procurarPet.css
@@ -1,15 +1,21 @@
+/* Estilo de margens, preenchimento e box-sizing */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+
+/* Estilos para o título h1 */
+
 h1 {
     color: #1877f2;
-    /* Cor azul do Facebook */
     margin-bottom: 20px;
-    /* Espaçamento abaixo do título */
 }
+
+
+/* Estilos para o body */
 
 body {
     font-family: Arial, sans-serif;
@@ -17,6 +23,9 @@ body {
     color: #333;
     position: relative;
 }
+
+
+/* Estilos para o cabeçalho */
 
 .header {
     background-color: #e6f2ff;
@@ -26,6 +35,9 @@ body {
     position: relative;
 }
 
+
+/* Estilos para o container */
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -33,6 +45,9 @@ body {
     background-color: rgb(255, 255, 153);
     margin-bottom: 20px;
 }
+
+
+/* Estilos para o cartão de animal */
 
 .animal-card {
     display: flex;
@@ -43,22 +58,32 @@ body {
     margin-bottom: 20px;
 }
 
+
+/* Estilos para a imagem do animal dentro do cartão */
+
 .animal-card img {
     max-width: 200px;
-    /* Defina o tamanho máximo desejado */
     height: auto;
-    /* Permita que a altura seja ajustada automaticamente */
     border-radius: 5px;
 }
+
+
+/* Estilos para o título h2 dentro do cartão */
 
 .animal-card h2 {
     margin-top: 10px;
     color: #333;
 }
 
+
+/* Estilos para parágrafos dentro do cartão */
+
 .animal-card p {
     margin-bottom: 10px;
 }
+
+
+/* Estilos para o rodapé */
 
 .footer {
     background-color: #333;
@@ -67,12 +92,18 @@ body {
     text-align: center;
 }
 
+
+/* Estilos para o grupo de botões */
+
 .button-group {
     position: absolute;
     top: 20px;
     right: 20px;
     display: flex;
 }
+
+
+/* Estilos para botões de saída e voltar */
 
 .exit-button,
 .back-button {
@@ -85,30 +116,34 @@ body {
     margin-left: 10px;
 }
 
+
+/* Estilos para botões de saída e voltar no hover */
+
 .exit-button:hover,
 .back-button:hover {
     background-color: #146ac5;
 }
 
+
+/* Estilos para informações do animal */
+
 .animal-info {
     flex: 1;
     margin-right: 20px;
     margin-bottom: 20px;
-    /* Adiciona margem inferior para espaçamento entre os cards */
 }
 
-.animal-info h2 {
-    margin-top: 0;
-}
+
+/* Estilos para a imagem do animal */
 
 .animal-image {
     flex-shrink: 0;
-    /* Não encolhe a imagem */
     width: 200px;
-    /* Defina o tamanho máximo das imagens */
     margin-left: 20px;
-    /* Espaçamento entre a imagem e os botões */
 }
+
+
+/* Estilos para imagens dentro das informações do animal */
 
 .animal-image img {
     width: 100%;
@@ -116,56 +151,52 @@ body {
     border-radius: 5px;
 }
 
+
+/* Estilos para o texto dentro das informações do animal */
+
 .animal-info h2,
 .animal-info p {
     margin-bottom: 10px;
-    /* Adiciona espaçamento entre cada elemento */
 }
+
+
+/* Estilos para a borda da logo */
 
 .logo img {
     border: 10px solid white;
-    /* Adiciona uma borda direita branca */
     border-radius: 10px;
-    /* Arredonda as bordas da imagem */
 }
+
+
+/* Estilos para a mensagem de sem pet */
 
 .sem-pet {
     font-size: 18px;
-    /* Tamanho da fonte */
     color: #555;
-    /* Cor do texto */
     text-align: center;
-    /* Alinhamento centralizado */
     margin-top: 20px;
-    /* Espaçamento superior */
     padding: 10px;
-    /* Preenchimento interno */
     background-color: #f9f9f9;
-    /* Cor de fundo */
     border-radius: 5px;
-    /* Arredondamento das bordas */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* Sombra */
 }
+
+
+/* Estilos para botões de adoção */
 
 .adoption-button {
     background-color: #1877f2;
-    /* Define a cor de fundo do botão como azul */
     color: white;
-    /* Define a cor do texto como branco */
     display: inline-block;
-    /* Exibe os botões lado a lado */
     margin-top: 10px;
-    /* Adiciona um espaçamento entre o botão e a imagem */
     text-align: center;
-    /* Alinha o texto no centro */
     width: 80px;
-    /* Define uma largura fixa para os botões */
     padding: 5px;
-    /* Adiciona preenchimento interno aos botões */
     margin-left: 10px;
-    /* Espaçamento entre os botões */
 }
+
+
+/* Estilos para o feedback de sucesso */
 
 .sucesso-feedback {
     position: fixed;
@@ -173,18 +204,11 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #1877f2;
-    /* Altera a cor de fundo para verde */
     color: #fff;
-    /* Altera a cor do texto para branco */
     padding: 20px;
-    /* Aumenta o preenchimento para 20 pixels */
     border-radius: 5px;
-    /* Reduz o raio da borda para um estilo mais suave */
     z-index: 9999;
     font-family: Arial, sans-serif;
-    /* Define uma fonte mais padrão */
     font-size: 14px;
-    /* Ajusta o tamanho da fonte para 14 pixels */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    /* Adiciona uma sombra suave */
 }
