--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,16 +2,23 @@
 <html lang="pt-br">
 
 <head>
+    <!-- Define a codificação do documento HTML -->
     <meta charset="UTF-8">
+    <!-- Define a escala inicial de visualização para dispositivos móveis -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Inclui o arquivo CSS para estilização da página -->
     <link rel="stylesheet" href="\css\main.css">
+    <!-- Título da página -->
     <title>Login - AdoptMe</title>
 </head>
 
 <body>
+    <!-- Container principal para o formulário de login -->
     <div class="login-container">
+        <!-- Logotipo -->
         <img src="\images\logo.jpg" alt="AdoptMe Logo" class="logo">
         <h1>AdoptMe</h1>
+        <!-- Formulário de login -->
         <form id="login-form" action="/usuario/logar" method="POST">
             <label for="email">E-mail:</label>
             <input type="email" id="email" name="email" required></br>
@@ -21,6 +28,7 @@
 
             <button type="submit">Entrar</button>
         </form>
+        <!-- Link para criar uma nova conta -->
         <p>Não tem uma conta? <a href="/usuario">Criar conta</a></p>
     </div>
 
